--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,12 +18,32 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
 
     <servlet>
         <servlet-name>auth</servlet-name>
-        <servlet-class>controller.IndexController</servlet-class>
+        <servlet-class>controller.AuthController</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>register</servlet-name>
+        <servlet-class>controller.RegistrationController</servlet-class>
+    </servlet>
+
+    <servlet>
+        <servlet-name>cabinet</servlet-name>
+        <servlet-class>controller.CabinetController</servlet-class>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>auth</servlet-name>
         <url-pattern>/auth</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>register</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>cabinet</servlet-name>
+        <url-pattern>/cabinet</url-pattern>
     </servlet-mapping>
 
 </web-app>
